tests/baselines/reference/parserGenericConstraint6.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericConstraint6.ts(1,19): error TS2304: Cannot find name 'List'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericConstraint6.ts(1,24): error TS2304: Cannot find name 'List'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGenericConstraint6.ts (2 errors) ====
    class C<T extends List<List<T> >> {
                      ~~~~
!!! error TS2304: Cannot find name 'List'.
                           ~~~~
!!! error TS2304: Cannot find name 'List'.
    }